# to-do-list-user-backend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py
app/api/: dependencies.py
app/api/v1/: auth.py  router.py  users.py
app/application/user/: dto.py  ports.py  use_cases.py
app/domain/user/: entity.py  exceptions.py  repository.py  value_objects.py
app/infrastructure/db/: models.py  session.py  user_repository.py
app/infrastructure/keycloak/: adapter.py
migrations/: env.py
src/: main.py
src/api/: dependencies.py
src/api/v1/: auth.py  router.py  users.py
src/application/user/: dto.py  ports.py  use_cases.py
src/core/: config.py
src/domain/user/: entity.py  repository.py  value_objects.py
src/infrastructure/db/: models.py  session.py  user_repository.py
src/infrastructure/keycloak/: adapter.py  exceptions.py
tests/application/: test_register_use_case.py
tests/domain/: test_user_entity.py
